gccida/c2/do_jump_by_parts_equality_rtx
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/do_jump_by_parts_equality_rtx/src/expr.c:10310:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/do_jump_by_parts_equality_rtx/src/expr.c:10320:30: error: invalid suffix 'xmode' on integer constant
v5 = gen_reg_rtx( *(short *)0xmode); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/do_jump_by_parts_equality_rtx/src/expr.c:10321:30: error: invalid suffix 'orce' on integer constant
v6 = operand_sub*(short *)0xforce( op0, 0, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/do_jump_by_parts_equality_rtx/src/expr.c:10321:46: error: use of undeclared identifier 'machine_mode'
v6 = operand_sub*(short *)0xforce( op0, 0, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
                                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/do_jump_by_parts_equality_rtx/src/expr.c:10321:6: error: use of undeclared identifier 'operand_sub'
v6 = operand_sub*(short *)0xforce( op0, 0, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/do_jump_by_parts_equality_rtx/src/expr.c:10329:17: error: invalid suffix 'xmode' on integer constant
v9 = *(short *)0xmode; 
                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/do_jump_by_parts_equality_rtx/src/expr.c:10331:31: error: invalid suffix 'orce' on integer constant
v11 = operand_sub*(short *)0xforce( op0, i, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/do_jump_by_parts_equality_rtx/src/expr.c:10331:47: error: use of undeclared identifier 'machine_mode'
v11 = operand_sub*(short *)0xforce( op0, i, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
                                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/do_jump_by_parts_equality_rtx/src/expr.c:10331:7: error: use of undeclared identifier 'operand_sub'
v11 = operand_sub*(short *)0xforce( op0, i, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/do_jump_by_parts_equality_rtx/src/expr.c:10340:67: error: invalid suffix 'xmode' on integer constant
do_compare_rtx_and_jump( v5, const_int_rtx[64], EQ, 1, *(short *)0xmode, 0LL, if_false_label, label); 
                                                                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/do_jump_by_parts_equality_rtx/src/expr.c:10352:31: error: invalid suffix 'orce' on integer constant
v15 = operand_sub*(short *)0xforce( op0, j, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/do_jump_by_parts_equality_rtx/src/expr.c:10352:47: error: use of undeclared identifier 'machine_mode'
v15 = operand_sub*(short *)0xforce( op0, j, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
                                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/do_jump_by_parts_equality_rtx/src/expr.c:10352:7: error: use of undeclared identifier 'operand_sub'
v15 = operand_sub*(short *)0xforce( op0, j, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/do_jump_by_parts_equality_rtx/src/expr.c:10353:68: error: invalid suffix 'xmode' on integer constant
do_compare_rtx_and_jump( v15, const_int_rtx[64], EQ, 1, *(short *)0xmode, 0LL, v12, 0LL); 
                                                                   ^
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/do_jump_by_parts_equality_rtx/src/obj/expr.o] Error 1
